2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Interoperability.mdp:
	* Gendarme.Rules.Interoperability.csproj: Activate makefile integration
	for all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-11-01  Sebastien Pouliot  <sebastien@ximian.com> 

	* MarshalBooleansInPInvokeDeclarationsRule.cs: New. Rule to warn if
	no marshalling information is given for boolean parameters and return
	values.
	* Gendarme.Rules.Interoperability.mdp: Add rule to MD project file.
	* Makefile.am: Add rule and test to build.

2008-11-01  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotCastIntPtrToInt32Rule.cs: Now cover the case where Marshal.
	ReadInt[32|64] is used to read pointers (i.e. casted into IntPtr). 
	Renamed rule to (more general) DoNotAssumeIntPtrSizeRule

2008-10-30  Jesse Jones  <jesjones@mindspring.com>

	* Makefile.am: Inherit EXTRA_TESTS_OPTIONS from common.make.

2008-10-21  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Removed common stuff in order to reduce duplication with
	other Makefiles.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Added support for generating the documentation files to
	the build process.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.Interoperability.xml,
	doc/Gendarme.Rules.Interoperability: With the new code in the Makefiles
	we don't need to keep the documentation files in the repository.

2008-10-17  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Make Branch
	implement IEquatable<T> (self-test).
	* UseManagedAlternativesToPInvokeRule.cs: Make PInvokeCall implement
	IEquatable<T> (self-test).

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-09-14  Sebastien Pouliot  <sebastien@ximian.com> 
