@@ -1,3 +1,7 @@
+2008-11-15  Jesse Jones  <jesjones@mindspring.com>
+
+    * DoNotCastIntPtrToInt32Rule.cs: Checks for overflow convert instructions.
+
 2008-11-07  Alan McGovern  <amcgovern@novell.com>
 
 	* Makefile.am:
